// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#7173ce",
      "borderRadius": 6,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "paddingHorizontal": 14,
          "paddingVertical": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`should render properly with style 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "borderRadius": 6,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "paddingHorizontal": 14,
          "paddingVertical": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Hello
  </Text>
</View>
`;
